force-app/main/default/objects/clofor_com_cfs__ConnectWorkOrderVAT__c/fields/clofor_com_cfs__DescriptionOnVATInvoice__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DescriptionOnVATInvoice__c</fullName>
    <label>DESCRIPTION ON VAT INVOICE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>