force-app/main/default/objects/clofor_com_cfs__ConnectWorkOrderVAT__c/fields/clofor_com_cfs__WorkOrderID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WorkOrderID__c</fullName>
    <label>WORK ORDER ID</label>
    <referenceTo>clofor_com_cfs__WorkOrder__c</referenceTo>
    <relationshipName>ConnectWorkOrderVAT</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>